# Labgpu-controller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  real_server_validation.md
.github/workflows/: ci.yml  release-build.yml
docs/: ai-session-smoke-test.md  alpha_checklist.md  compatibility.md  demand_research.md  design.md  differentiation.md  distribution.md  lab_setup.md  quickstart.md  roadmap.md  security.md  troubleshooting.md
scripts/: alpha_smoke_test.sh  build_standalone.py  package_macos_dmg.sh  package_windows_zip.sh
src/labgpu/: __init__.py
src/labgpu/cli/: adopt.py  context.py  demo.py  desktop.py  diagnose.py  doctor.py  init.py  (+17 more)
tests/: test_ai_gateway.py  test_ai_session.py  test_alert_lifecycle.py  test_assistant.py  test_ccswitch.py  test_cli_list.py  test_cli_status.py  test_config_inventory.py  test_context.py  test_dashboard_pages.py  test_desktop_cli.py  test_diagnose.py  test_fake_collector.py  test_git_snapshot.py  test_gpu_select.py  test_init_cli.py  test_kill_safety.py  test_large_log_tail.py  test_logs.py  test_nvidia_smi_parser.py  test_pick_and_history.py  test_probe_cache.py  test_process_inspector.py  test_redaction.py  test_refresh.py  test_remote_actions.py  test_remote_probe.py  test_remote_state.py  test_run_auto_and_adopt.py  test_run_id.py  test_ssh_config.py  test_standalone_cli.py  test_status_tracking_modes.py  test_store.py  test_transfer_tools.py  test_vscode_recent.py  test_web_api.py
(+48 files in other folders)
