[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "labgpu"
version = "0.1.0"
description = "Lightweight experiment observability for shared GPU servers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "LabGPU contributors" }
]
keywords = ["gpu", "experiments", "research", "nvidia-smi", "tmux", "mlops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/66LIU-frank/Labgpu-controller"
Issues = "https://github.com/66LIU-frank/Labgpu-controller/issues"

[project.scripts]
labgpu = "labgpu.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
